Exception is fixed. Log is added. Minor fixes